<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tb_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_taskList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/app_taskListLabel"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_TaskList"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_margin="10sp" />

    <Button
        android:id="@+id/btn_addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_btnAddTask"
        android:textAlignment="center"
        android:layout_marginHorizontal="150sp"/>

</LinearLayout>