<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtNewTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/updateTaskNameHint"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtNewSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/updateTaskSubjectHint"
        android:inputType="text"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/sp_photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_weight="1"
        android:entries="@array/images" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/app_btnUpdate" />

        <Button
            android:id="@+id/btnGoToTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/app_btnTimer" />

    </LinearLayout>

    <Button
        android:id="@+id/btnDialogClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_weight="1"
        android:text="Close" />

</LinearLayout>
